chore: updated the swagger annotations
