# internal/controller/product_controller.go
@@ -116,6 +116,8 @@ func (p productController) createProductHandler(c *gin.Context) {
 // @Tags			  product
 // @ID				  list-products
 // @Produce		      json
+// @Param             page       query    int    false   "Page number"
+// @Param             per_page   query    int    false   "Number of items per page"
 // @Success		      200	{object}	response.Response
 // @Router			  /product/list [get]
 func (p productController) listProductHandler(c *gin.Context) {
