# internal/controller/user_controller.go
@@ -190,6 +190,8 @@ func (u UserController) LoginHandler(c *gin.Context) {
 // @ID			   list-users
 // @Produce		   json
 // @Security	   JWT
+// @Param          page      query   int  false  "Page number"
+// @Param          per_page  query   int  false  "Number of items per page"
 // @Success		   200	{object}	response.Response
 // @Router		   /user/list [get]
 func (u UserController) listUserHandler(c *gin.Context) {
